--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -680,6 +680,14 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   pages={159--174},
   year={1977},
   publisher={JSTOR}
+},
+@InProceedings{chen-EtAl:2017b:natural,
+  author    = {Chen, Qian and Zhu, Xiaodan and Ling, Zhen-Hua and Inkpen, Diana and Wei, Si},
+  title     = {Neural Natural Language Inference Models Enhanced with External Knowledge},
+  booktitle = {The 56th Annual Meeting of the Association for Computational Linguistics (ACL)},
+  month     = {July},
+  year      = {2018},
+  address   = {Melbourne, Australia}
 }
 
 
