--- a/thesis.tex
+++ b/thesis.tex
@@ -77,6 +77,7 @@ TODO in Deutsch...
  \acro{POS}{Part of Speech}
  \acro{OANC}{Open American National Corpus}
  \acro{QA}{Question Answering}
+ \acro{ReLU}{Rectified Linear Units}
  \acro{RNN}{Recurrent Neural Network}
  \acro{RTE}{Recognizing Textual Entailment}
  \acro{SD}{Standard Deviation}
