--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -162,12 +162,6 @@
   year={2001},
   organization={Lancaster University Centre for Computer Corpus Research on Language Lancaster, UK}
 },
-@article{nangia2017repeval,
-  title={The repeval 2017 shared task: Multi-genre natural language inference with sentence representations},
-  author={Nangia, Nikita and Williams, Adina and Lazaridou, Angeliki and Bowman, Samuel R},
-  journal={arXiv preprint arXiv:1707.08172},
-  year={2017}
-},
 @article{nie2017shortcut,
   title={Shortcut-stacked sentence encoders for multi-domain inference},
   author={Nie, Yixin and Bansal, Mohit},
@@ -688,7 +682,22 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   month     = {July},
   year      = {2018},
   address   = {Melbourne, Australia}
+},
+@inproceedings{shwartz2016adding,
+  title={Adding context to semantic data-driven paraphrasing},
+  author={Shwartz, Vered and Dagan, Ido},
+  booktitle={Proceedings of the Fifth Joint Conference on Lexical and Computational Semantics},
+  pages={108--113},
+  year={2016}
+},
+@article{nangia2017repeval,
+  title={The RepEval 2017 Shared Task: Multi-Genre Natural Language Inference with Sentence Representations},
+  author={Nangia, Nikita and Williams, Adina and Lazaridou, Angeliki and Bowman, Samuel R},
+  journal={RepEval 2017},
+  pages={1},
+  year={2017}
 }
+
 
 
 
