--- a/thesis.tex
+++ b/thesis.tex
@@ -70,6 +70,7 @@ TODO in Deutsch...
  \acro{KIM}{Knowledge-based Inference Model}
  \acro{LSTM}{Long-Short-Term-Memory}
  \acro{MLP}{Multi Layer Perceptron}
+ \acro{MSE}{Mean Squared Error}
  \acro{MultiNLI}{MultiGenre Natural Language Inference Corpus}
  \acro{NLI}{Natural Language Inference}
  \acro{NLP}{Natural Language Processing}
