--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -696,7 +696,27 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   journal={RepEval 2017},
   pages={1},
   year={2017}
+},
+@article{Ruder2017Jun,
+	author = {Ruder, Sebastian},
+	title = {{An Overview of Multi-Task Learning in Deep Neural Networks}},
+	journal = {arXiv},
+	year = {2017},
+	month = {Jun},
+	eprint = {1706.05098},
+	url = {https://arxiv.org/abs/1706.05098}
+},
+@article{gulccehre2016knowledge,
+  title={Knowledge matters: Importance of prior information for optimization},
+  author={G{\"u}l{\c{c}}ehre, {\c{C}}aǧlar and Bengio, Yoshua},
+  journal={The Journal of Machine Learning Research},
+  volume={17},
+  number={1},
+  pages={226--257},
+  year={2016},
+  publisher={JMLR. org}
 }
+
 
 
 
