--- a/bib/literature.bib
+++ b/bib/literature.bib
@@ -715,7 +715,15 @@ Author = {Tushar Khot and Ashish Sabharwal and Peter Clark},
   pages={226--257},
   year={2016},
   publisher={JMLR. org}
+},
+@inproceedings{sukhbaatar2015end,
+  title={End-to-end memory networks},
+  author={Sukhbaatar, Sainbayar and Weston, Jason and Fergus, Rob and others},
+  booktitle={Advances in neural information processing systems},
+  pages={2440--2448},
+  year={2015}
 }
+
 
 
 
